@@ -60,6 +60,7 @@
 	- fix: filter duplicate package removals (#35828).
 	- add armv3l arch.
 	- fix: i18n strings need 1 on sucess return code (#41313).
+	- fix: skip %ghost files when building packages (#38218).
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
